<resources>
    <string name="app_name">AgendaTelefonica</string>
    <string name="erro_busca_usuario">Usuario nao existe</string>
    <string name="erro_criar_conta">Nao foi possivel criar usuario, dados invalidos</string>
    <string name="login">Login</string>
    <string name="crie_sua_conta">Criar conta</string>
    <string name="nome_contato">Nome:</string>
    <string name="email_contato">Email:</string>
    <string name="telefone_contato">Telefone:</string>
    <string name="url_image_contato">Url da imagem de contato:</string>
    <string name="botao_criar_novo_contato">Criar Contato</string>
    <string name="botao_editar_contato">Editar</string>
    <string name="botao_apagar_contato">Apagar</string>
    <string name="datanascimento_contato">Data de nascimento:</string>
</resources>
